Release 2.0
===========

* Dario Teixeira's patch making PostgreSQL's NUMERIC type be converted
  to/from OCaml strings.  This change is not backward's compatible,
  requiring a bump in the major version number (though there seems
  to be no actual code in the wild relying on the previous behaviour).
* Dario Teixeira's patch adding function 'uuid', which exposes the
  unique connection handle identifier.
* Jacques-Pascal Deplaix's patches adding 'catch', 'transact', 'alive',
  'inject', and 'alter' functions.
* Jacques-Pascal Deplaix's patch removing all traces of ExtLib.
  (PG'OCaml now uses Batteries exclusively.)


Release 1.7.1
=============

* Fixed missing dependency in _oasis file.


Release 1.7
===========

* Build system now uses OASIS.
* Directory tree reorganisation.
* Now using Batteries only.
* Migration to Batteries 2.0.


Release 1.6
===========

* Fixed Makefile: it should now work with any OCaml version.
* Richard Jones patch converting all references of 'loc' into '_loc'.
  The former has been deprecated for a while now.


Release 1.5
===========

* Dario Teixeira's patch adding support for more array types, namely
  bool[], int8[], text[], float4[], and float8[].
* Michael Ekstrand's patch to make PG'Ocaml work with batteries,
  if so requested (it still uses ExtLib by default).
* Dario Teixeira's patch adding support for Hstore.
* David Allsopp's patch fixing connection on Windows.
* David Allsopp's patch for better reporting of nullable results.
* Dario Teixeira's patch adding support for the 'hex' serialisation
  format introduced with PostgreSQL 9.0.
* Matías Giovannini's patch adding support for cursors.
* Dario Teixeira's patch adding support for the various transaction
  options in function 'begin_work'.


Release 1.4
===========

* Boris Yakobowski's patch that replaces 'rows' and 'varname'
  with '_rows' and '_varname' (avoids unused variable warnings)
* Support for INET type (patch by David Allsopp)