@@ -272,11 +272,11 @@ type point = float * float
 type hstore = (string * string option) list
 type numeric = string
 
-type bool_array = bool array
-type int32_array = int32 array
-type int64_array = int64 array
-type string_array = string array
-type float_array = float array
+type bool_array = bool option array
+type int32_array = int32 option array
+type int64_array = int64 option array
+type string_array = string option array
+type float_array = float option array
 
 (** The following conversion functions are used by pa_pgsql to convert
   * values in and out of the database.
@@ -1474,11 +1474,11 @@ type point = float * float
 type hstore = (string * string option) list
 type numeric = string
 
-type bool_array = bool array
-type int32_array = int32 array
-type int64_array = int64 array
-type string_array = string array
-type float_array = float array
+type bool_array = bool option array
+type int32_array = int32 option array
+type int64_array = int64 option array
+type string_array = string option array
+type float_array = float option array
 
 let string_of_hstore hstore =
   let string_of_quoted str = "\"" ^ str ^ "\"" in
@@ -1543,16 +1543,35 @@ let string_of_any_array a =
   Buffer.add_char buf '{';
   for i = 0 to Array.length a - 1 do
     if i > 0 then Buffer.add_char buf ',';
-    Buffer.add_string buf a.(i);
+    match a.(i) with
+      | Some x ->
+        Buffer.add_char buf '"';
+        Buffer.add_string buf x;
+        Buffer.add_char buf '"'
+      | None ->
+        Buffer.add_string buf "NULL"
   done;
   Buffer.add_char buf '}';
   Buffer.contents buf
 
-let string_of_bool_array a = string_of_any_array (Array.map string_of_bool a)
-let string_of_int32_array a = string_of_any_array (Array.map Int32.to_string a)
-let string_of_int64_array a = string_of_any_array (Array.map Int64.to_string a)
-let string_of_string_array a = string_of_any_array a
-let string_of_float_array a = string_of_any_array (Array.map string_of_float a)
+let option_map f = function
+  | Some x -> Some (f x)
+  | None -> None
+
+let escape_string str =
+  let buf = Buffer.create 128 in
+  for i = 0 to String.length str - 1 do
+    match str.[i] with
+      | '"' | '\\' as x -> Buffer.add_char buf '\\'; Buffer.add_char buf x
+      | x -> Buffer.add_char buf x
+  done;
+  Buffer.contents buf
+
+let string_of_bool_array a = string_of_any_array (Array.map (option_map string_of_bool) a)
+let string_of_int32_array a = string_of_any_array (Array.map (option_map Int32.to_string) a)
+let string_of_int64_array a = string_of_any_array (Array.map (option_map Int64.to_string) a)
+let string_of_string_array a = string_of_any_array (Array.map (option_map escape_string) a)
+let string_of_float_array a = string_of_any_array (Array.map (option_map string_of_float) a)
 
 let string_of_bytea b =
   let len = String.length b in
@@ -1704,22 +1723,40 @@ let interval_of_string =
 
 let unit_of_string _ = ()
 
-(* NB. It is the responsibility of the caller of this function to
- * properly unescape returned elements.
- *)
+(* NB. This function also takes care of unescaping returned elements. *)
 let any_array_of_string str =
   let n = String.length str in
   assert (str.[0] = '{');
   assert (str.[n-1] = '}');
   let str = String.sub str 1 (n-2) in
-  let fields = String.nsplit str "," in
-  Array.of_list fields
+  let buf = Buffer.create 128 in
+  let add_field accum =
+    let x = Buffer.contents buf in
+    Buffer.clear buf;
+    let field =
+      if x = "NULL"
+      then
+        None
+      else
+        let n = String.length x in
+        if n >= 2 && x.[0] = '"' 
+        then Some (String.sub x 1 (n-2))
+        else Some x in
+    field :: accum in
+  let loop (accum, quoted, escaped) = function
+    | '\\' when not escaped -> (accum, quoted, true)
+    | '"' when not escaped -> Buffer.add_char buf '"'; (accum, not quoted, false)
+    | ',' when not escaped && not quoted -> (add_field accum, false, false)
+    | x -> Buffer.add_char buf x; (accum, quoted, false) in
+  let (accum, _, _) = String.fold_left loop ([], false, false) str in
+  let accum = if Buffer.length buf = 0 then accum else add_field accum in
+  Array.of_list (List.rev accum)
 
-let bool_array_of_string str = Array.map bool_of_string (any_array_of_string str)
-let int32_array_of_string str = Array.map Int32.of_string (any_array_of_string str)
-let int64_array_of_string str = Array.map Int64.of_string (any_array_of_string str)
+let bool_array_of_string str = Array.map (option_map bool_of_string) (any_array_of_string str)
+let int32_array_of_string str = Array.map (option_map Int32.of_string) (any_array_of_string str)
+let int64_array_of_string str = Array.map (option_map Int64.of_string) (any_array_of_string str)
 let string_array_of_string str = any_array_of_string str
-let float_array_of_string str = Array.map float_of_string (any_array_of_string str)
+let float_array_of_string str = Array.map (option_map float_of_string) (any_array_of_string str)
 
 let is_first_oct_digit c = c >= '0' && c <= '3'
 let is_oct_digit c = c >= '0' && c <= '7'
